# GraphShaders

./: .dockerignore  .gitignore  .vimrc  CMakeLists.txt  Dockerfile  FILES  FILES.FGL  FILES.JS-Deps  FILES.NBER-Patents  FILES.SO-Answers  JS-Deps.fgsl  JS-Deps.gsp  Makefile  NBER-Patents.fgsl  NBER-Patents.sh  Partition Graph Data.ipynb  README.ipynb  README.md  SO-Answers.fgsl  SO-Answers.gsp  SO-Answers.sh  animhist.py  csv2bin.py  data  env.sh  fg.py  fg.sh  fix_so.py  foo.py  go.sh  graph_to_dat.py  gs.py  gs.sh  histlineplot.py  logparse.py  main.c  patch_layout.py  process_measurements.py  realhistlineplot.py  stitch.py  (+2 more)
data/R/: README.md  nodes.csv
data/les-miserables/: README.md  edges.csv  nodes.csv
examples/JS-Deps/: JS-Deps.sh
examples/NBER-Patents/: Makefile  NBER-Patents.gsp  NBER-Patents.sh
examples/SO-Answers/: Makefile  SO-Answers.gsp  SO-Answers.sh
fgl/: fgl.py  frag.glsl.template  vert.glsl.template
graph/: Makefile
include/: fg.h  render.h
include/glad/: glad.h
layout-tools/: Dockerfile  dhelp.sh
layout-tools/gviz-gephi/: Dockerfile  dhelp.sh
layout-tools/gviz-gephi/scripts/: bigforcelayout.py  forceAtlas2.sh
layout-tools/scripts/: layout.py
libmicrohttpd-0.9.70/: .gitignore  MHD_config.h  Makefile  config.status  libmicrohttpd.pc  libtool
libmicrohttpd-0.9.70/contrib/: Makefile
libmicrohttpd-0.9.70/doc/: Makefile
libmicrohttpd-0.9.70/doc/doxygen/: Makefile
libmicrohttpd-0.9.70/doc/examples/: Makefile  basicauthentication  hellobrowser  largepost  logging  responseheaders  sessions  simplepost
libmicrohttpd-0.9.70/m4/: Makefile
libmicrohttpd-0.9.70/po/: Makefile  Makefile.in
libmicrohttpd-0.9.70/src/: Makefile
libmicrohttpd-0.9.70/src/examples/: Makefile  authorization_example  benchmark  benchmark_https  chunked_example  demo  digest_auth_example  dual_stack_example  fileserver_example  fileserver_example_dirs  fileserver_example_external_select  http_chunked_compression  http_compression  minimal_example  minimal_example_comet  minimal_example_empty  post_example  querystring_example  refuse_post_example  suspend_resume_epoll  timeout  upgrade_example
libmicrohttpd-0.9.70/src/include/: Makefile
libmicrohttpd-0.9.70/src/lib/: Makefile
libmicrohttpd-0.9.70/src/microhttpd/: Makefile  libmicrohttpd.la  libmicrohttpd_la-base64.lo  libmicrohttpd_la-basicauth.lo  libmicrohttpd_la-connection.lo  libmicrohttpd_la-daemon.lo  libmicrohttpd_la-digestauth.lo  libmicrohttpd_la-internal.lo  libmicrohttpd_la-md5.lo  libmicrohttpd_la-memorypool.lo  libmicrohttpd_la-mhd_compat.lo  libmicrohttpd_la-mhd_itc.lo  libmicrohttpd_la-mhd_mono_clock.lo  libmicrohttpd_la-mhd_send.lo  libmicrohttpd_la-mhd_sockets.lo  libmicrohttpd_la-mhd_str.lo  libmicrohttpd_la-mhd_threads.lo  libmicrohttpd_la-postprocessor.lo  libmicrohttpd_la-reason_phrase.lo  libmicrohttpd_la-response.lo  libmicrohttpd_la-sha256.lo  (+2 more)
scripts/: duration.awk  pretty.sh  reorder.sh  sort.sh  times.awk
shaders/: graph.frag  graph.vert
src/: GraphShaderEngine.cpp  GraphShaderServer.py  GraphShaderTranspiler.py  base64.c  base64.h  eglinfo.c  fg.c  fg.h  glad.c  glad_egl.c  graphshader.py  gs.c  index.html  main  main_render.c  rc.h  render.c  render.h  server.c  server.h  vec.c  vec.h  voxel_traversal.c  voxel_traversal.h
src/MAB/: log.c  log.h
src/glad/: glad.h  glad_egl.h
src/shaders/: default.vert  graph.vert
static/: .index.html.swp  JS-Deps.index.html  NBER-Patents.index.html  R.index.html  SO-Answers.index.html  cit-pat-index.html  edgetest.index.html  error.html  fg.js  index.css  index.html  index.js  js-deps-index.html  knit-graph.index.html  knitgraph.js  les-miserables.index.html  shaders.js
static/COM-Orkut/: index.js
static/JS-Deps/: index.js
static/JS-Deps-0/: index.js
static/JS-Deps-1/: index.js
static/JS-Deps-2/: index.js
static/JS-Deps-3/: index.js
static/JS-Deps-4/: index.js
static/JS-Deps-5/: index.js
static/JS-Deps-9/: index.js
static/NBER-Patents/: index.js
static/NBER-Patents-0/: index.js
static/NBER-Patents-1/: index.js
static/NBER-Patents-2/: index.js
static/NBER-Patents-8/: index.js
static/NBER-Patents-9/: index.js
static/SO-Answers/: index.js
static/SO-Answers-0/: index.js
static/SO-Answers-1/: index.js
static/SO-Answers-2/: index.js
static/SO-Answers-3/: index.js
static/SO-Answers-4/: index.js
static/SO-Answers-5/: index.js
static/SO-Answers-6/: index.js
static/SO-Answers-7/: index.js
static/SO-Answers-8/: index.js
static/SO-Answers-9/: index.js
static/common/: fg.js  index.css  index.html
tests/: CMakeLists.txt  common.c  common.h  test_fg  test_fg.c
zorder-lib/: LEGAL.txt  LICENSE.txt  Makefile  zo-sanity1.c  zo-sanity2.c  zo-sanity3.c  zo-sanity4.c  zorder.c  zorder.h  zorder.pc
(+83 files in other folders)
